--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dev:tauri": "tauri dev",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "tauri": "tauri"
   },
   "dependencies": {
     "react": "^18.2.0",
@@ -16,6 +17,7 @@
     "sass": "^1.70.0"
   },
   "devDependencies": {
+    "@tauri-apps/cli": "^2.0.0-beta.1",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
