--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "sass": "^1.70.0"
+    "sass": "^1.70.0",
+    "ts-node": "^10.9.2"
   },
   "devDependencies": {
     "@tauri-apps/cli": "^2.0.0-beta.1",
