--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "vite --host",
     "dev:tauri": "tauri dev",
     "build": "tsc && vite build",
+    "generate:library": "node --loader ts-node/esm src/scripts/libraryGenerator.ts",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "tauri": "tauri"
