--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dev:tauri": "tauri dev",
     "build": "tsc && vite build",
     "generate:library": "node --loader ts-node/esm src/scripts/libraryGenerator.ts",
+    "generate:icons": "node --loader ts-node/esm src/scripts/iconsToJson.js",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "tauri": "tauri"
@@ -16,6 +17,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "sass": "^1.70.0",
+    "svgo": "^3.2.0",
     "ts-node": "^10.9.2"
   },
   "devDependencies": {
