--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "open-fm",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0 beta",
   "type": "module",
   "scripts": {
     "dev": "vite --host",
@@ -16,11 +16,11 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "sass": "^1.70.0",
-    "svgo": "^3.2.0",
-    "ts-node": "^10.9.2"
+    "sass": "^1.70.0"
   },
   "devDependencies": {
+    "svgo": "^3.2.0",
+    "ts-node": "^10.9.2",
     "@tauri-apps/cli": "^2.0.0-beta.1",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
