--- a/package.json
+++ b/package.json
@@ -5,13 +5,11 @@
   "type": "module",
   "scripts": {
     "dev": "vite --host",
-    "dev:tauri": "tauri dev",
     "build": "tsc && vite build",
     "generate:library": "node --loader ts-node/esm src/scripts/libraryGenerator.ts",
     "generate:icons": "node --loader ts-node/esm src/scripts/iconsToJson.js",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview",
-    "tauri": "tauri"
+    "preview": "vite preview"
   },
   "dependencies": {
     "react": "^18.2.0",
@@ -19,9 +17,6 @@
     "sass": "^1.70.0"
   },
   "devDependencies": {
-    "svgo": "^3.2.0",
-    "ts-node": "^10.9.2",
-    "@tauri-apps/cli": "^2.0.0-beta.1",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
@@ -30,6 +25,8 @@
     "eslint": "^8.55.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "svgo": "^3.2.0",
+    "ts-node": "^10.9.2",
     "typescript": "^5.2.2",
     "vite": "^5.0.8"
   }
